# prismlens-agent

./: .gitignore  LICENSE  Makefile  README.md  VERSIONING.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  test_security.py  worker_playground.py
backend/app/api/: auth.py  deps.py  errors.py  exception_handlers.py  responses.py  routes.py
backend/app/core/: config.py  debug_log.py  security.py
backend/app/db/: curd.py  models.py  session.py
backend/app/pipeline/: checkpoint.py  graph.py  nodes.py  state.py
backend/app/schemas/: auth.py
backend/app/worker/: tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 1ab39136eea3_create_users_and_research_tasks_tables.py  5d2f2a7c9b31_add_user_hashed_password.py
backend/tests/: test_checkpoint.py  test_pipeline_nodes.py  test_routes.py  test_worker_tasks.py
docs/superpowers/plans/: 2026-07-02-agent-workbench.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/result/[id]/: page.tsx
frontend/components/: EventForm.tsx  ProgressPanel.tsx  ReportView.tsx
frontend/lib/: api.test.mjs  api.ts
