[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "langgraph>=1.2.6",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
