[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "redis>=5.3.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
]
